--- a/src/index.css
+++ b/src/index.css
@@ -502,8 +502,14 @@ input[type="range"]::-webkit-slider-thumb {
 input[type="checkbox"] {
   width: 15px;
   height: 15px;
-  flex-shrink: 0 !important;
 
+}
+
+input[type="checkbox"]:checked {
+  width: 15px;
+  height: 15px;
+  accent-color: #40FF62;
+  background-color: #40FF62;
 }
 
 .check-box-parent input[type="radio"]:checked~span:before {
